deploy/k8s/platform/identity/frontend-web-oauth2-proxy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-web-oauth2-proxy
  namespace: urfu-prod
  labels:
    app.kubernetes.io/name: frontend-web-oauth2-proxy
spec:
  selector:
    app.kubernetes.io/name: frontend-web-oauth2-proxy
  ports:
    - port: 4180
      targetPort: http
      protocol: TCP
      name: http
