deploy/k8s/platform/identity/pomerium-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pomerium
  namespace: urfu-platform
  labels:
    app.kubernetes.io/name: pomerium
spec:
  selector:
    app.kubernetes.io/name: pomerium
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
